--- a/views/room.ejs
+++ b/views/room.ejs
@@ -45,6 +45,11 @@
             <i class="fas fa-camera"></i>
             <span>Turn Camera</span>
           </div>
+
+          <div class="main__controls__button main__turn_button" onclick="turnCamera()">
+            <img src="https://img.icons8.com/ios/50/000000/add-camera.png"/>
+            <span>Filters</span>
+          </div>
         </div>
 
         <div class="main__controls__block">
