--- a/views/createRoom.ejs
+++ b/views/createRoom.ejs
@@ -14,6 +14,11 @@
         <input id="RoomID" type="number" name="room_ID" placeholder=" Room ID" required/>
       <Button onclick="createCallRoom()">Create Room</Button>
       </form>
+
+      <form action="/join_room" method="POST"> 
+        <Button id="join_room" onclick="joinCallRoom()">Join Room</Button>
+        <input id="join_room_id" type="number" name="join_room_ID" placeholder="Enter Room ID" required/>
+      </form>
       
     </div>
   </div>
