--- a/public/createRoom.css
+++ b/public/createRoom.css
@@ -3,12 +3,59 @@ body{
   background-repeat: no-repeat;
 }
 
-.createRoom{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin: 150px;
+img{
+  margin-right: 400px;
+    margin-top: -100px;
 }
 
-.join_room{
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+    margin-top: 120px;
+}
+
+#heading{
+  margin-bottom: 50px;
+  color: white;
+  margin-top: -45px;
+  margin-right: 160px;
+  font-size: 30px;
+}
+
+#join_room{
+  padding: 50px;
+}
+
+.btn{
+  border: 2px solid #ff7675;
+  position: relative;
+  display: block;
+  color: #ff7675;
+  font-size: 14px;
+  font-family: "montserrat";
+  margin: 30px 0;
+  padding: 14px 60px;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: 1s all ease;
+}
+.btn::before{
+  background: #ff7675;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  z-index: -1;
+  transition: all 0.6s ease;
+}
+
+.btn1::before{
+  width: 0%;
+  height: 100%;
+}
+
+.btn1:hover::before{
+  width: 100%;
 }
