--- a/public/createRoom.css
+++ b/public/createRoom.css
@@ -1,61 +1,71 @@
 body{
-  background-image: url(first-display.jpg);
-  background-repeat: no-repeat;
+  background-color: #333;
 }
 
 img{
-  margin-right: 400px;
-    margin-top: -100px;
+  margin-right: 5px;
+  margin-top: -20px;
+}
+
+.main_heading{
+  display: -webkit-inline-box;
+  margin-right: 60px;
+  margin-bottom: 20px;
 }
 
 .container{
   display: flex;
   flex-direction: column;
   align-items: center;
-    margin-top: 120px;
+  margin-top: 80px;
 }
 
 #heading{
   margin-bottom: 50px;
   color: white;
-  margin-top: -45px;
-  margin-right: 160px;
+  /* margin-top: -45px;
+  margin-right: -80px; */
   font-size: 30px;
 }
 
 #join_room{
-  padding: 50px;
+  margin-top: 50px;
 }
 
 .btn{
-  border: 2px solid #ff7675;
-  position: relative;
+  color: white;
+  background-color: #4285F4;
+  width: 100px;
+}
+
+.btn1{
+  border: none;
+    border-radius: 2px;
+    font-size: 0.8em;
+    height: 2.75em;
+}
+
+.input_roomid{
   display: block;
-  color: #ff7675;
-  font-size: 14px;
-  font-family: "montserrat";
-  margin: 30px 0;
-  padding: 14px 60px;
-  text-transform: uppercase;
-  overflow: hidden;
-  transition: 1s all ease;
-}
-.btn::before{
-  background: #ff7675;
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  z-index: -1;
-  transition: all 0.6s ease;
+    background-color: transparent;
+    color: white;
+    border: none;
+    border-bottom: solid 1px #1E90FF;
+    font-size: 1em;
+    padding: .4em 0;
 }
 
-.btn1::before{
-  width: 0%;
-  height: 100%;
+.input_roomid:focus{
+  outline: none;
+  -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
-.btn1:hover::before{
-  width: 100%;
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
 }
