--- a/public/style.css
+++ b/public/style.css
@@ -37,7 +37,7 @@ video{
     display: flex;
     justify-content: center;
     align-items: center;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
 }
 
 .main__controls{
