--- a/views/room.ejs
+++ b/views/room.ejs
@@ -22,7 +22,7 @@
 <body>
 
   <div class="main">
-    <div class="main__left">
+    <div id="full-screen" class="main__left">
       <div class="main__videos">
         <div id="video-grid"></div>
       </div>
