Rohan Video Calling Application commit

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -21,8 +21,8 @@
 
 <body>
 
-  <div class="main">
-    <div id="full-screen" class="main__left">
+  <div id="full-screen" class="main">
+    <div class="main__left">
       <div class="main__videos">
         <div id="video-grid"></div>
       </div>
